force-app/main/default/objects/Liability_Payment__c/fields/Amounts_Due_to_DIR_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Amounts_Due_to_DIR_Explanation__c</fullName>
    <description>DIR Fees Explanation field is getting changed to Amounts Due to DIR Explanation field</description>
    <label>Amounts Due to DIR Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>