force-app/main/default/objects/Liability_Payment__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment</label>
    <referenceTo>Assessments__c</referenceTo>
    <relationshipLabel>Liability Payments</relationshipLabel>
    <relationshipName>Liability_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>