force-app/main/default/objects/Liability_Payment__c/fields/Case_Issue_RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>Case_Issue_RecordTypeId__c</fullName>
    <inlineHelpText>Populated and used by the PostCasePaymentController and PartyPaymentController apex classes.</inlineHelpText>
    <label>Case Issue RecordTypeId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>