force-app/main/default/objects/Liability_Payment__c/fields/Case_Payment__c.field-meta.xml
<CustomField>
    <fullName>Case_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Payment</label>
    <referenceTo>Case_Payment__c</referenceTo>
    <relationshipLabel>Liability Payments</relationshipLabel>
    <relationshipName>Liability_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>