force-app/main/default/objects/Liability_Payment__c/fields/Date_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Payment_Received__c</fullName>
    <formula>Case_Payment__r.Receipt__r.Date_Received__c</formula>
    <label>Date Payment Received</label>
    <type>Date</type>
</CustomField>