force-app/main/default/objects/Liability_Payment__c/fields/Payment_Applied_To__c.field-meta.xml
<CustomField>
    <fullName>Payment_Applied_To__c</fullName>
    <description>F0263</description>
    <label>Payment Applied To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wages</fullName>
            </value>
            <value>
                <fullName>Wage Interest</fullName>
            </value>
            <value>
                <fullName>Penalties</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Hold Amount</fullName>
            </value>
            <value>
                <fullName>Refund Amount</fullName>
            </value>
            <value>
                <fullName>Other Amount</fullName>
            </value>
            <value>
                <fullName>Buyback</fullName>
            </value>
            <value>
                <fullName>Amounts Due to DIR</fullName>
            </value>
            <value>
                <fullName>DIR Attorney Fees</fullName>
                <isActive>false</isActive>
                <label>DIR Attorney Fees</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>