force-app/main/default/objects/Liability_Payment__c/fields/Posted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Posted_Amount__c</fullName>
    <description>Formerly Payment_Amount__c</description>
    <label>Posted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>