force-app/main/default/objects/Liability_Payment__c/fields/Recommended_Amount__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Amount__c</fullName>
    <description>Formerly Recommended_Allocation__c</description>
    <label>Recommended Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>