force-app/main/default/objects/Liability_Payment__c/fields/Refund_Amount_Details__c.field-meta.xml
<CustomField>
    <fullName>Refund_Amount_Details__c</fullName>
    <inlineHelpText>Specifics of the Refund Amount</inlineHelpText>
    <label>Refund Amount Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>