force-app/main/default/objects/Liability_Payment__c/fields/Returned_Voided_Liability_Payment__c.field-meta.xml
<CustomField>
    <fullName>Returned_Voided_Liability_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this LP is a Corrective Entry, this field looks up to the original LP that this LP negates.</inlineHelpText>
    <label>Returned/Voided Liability Payment</label>
    <referenceTo>Liability_Payment__c</referenceTo>
    <relationshipLabel>Returned/Voided By</relationshipLabel>
    <relationshipName>Negated_Liability_Payment</relationshipName>
    <type>Lookup</type>
</CustomField>