force-app/main/default/objects/Liability_Payment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Recommended</fullName>
            </value>
            <value>
                <fullName>Posted</fullName>
            </value>
            <value>
                <fullName>Deposited-Returned Deduction</fullName>
            </value>
            <value>
                <fullName>Deposited-Returned</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Corrective Entry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>